# nwjs-ffmpeg

./: .gitmodules  BUILD.gn  configure  ffmpeg.gyp  ffmpeg_generated.gni  ffmpeg_generated.gypi  ffmpeg_options.gni
chromium/: ffmpeg.sigs  ffmpeg_stub_headers.fragment  ffmpegsumo.sigs
chromium/config/Chrome/android/arm/: config.h
chromium/config/Chrome/android/arm-neon/: config.h
chromium/config/Chrome/android/arm-neon/libavformat/: muxer_list.c
chromium/config/Chrome/android/arm64/: config.h
chromium/config/Chrome/android/ia32/: config.asm  config.h
chromium/config/Chrome/android/ia32/libavcodec/: codec_list.c
chromium/config/Chrome/android/ia32/libavformat/: protocol_list.c
chromium/config/Chrome/android/mips64el/: config.h
chromium/config/Chrome/android/mipsel/: config.h
chromium/config/Chrome/android/x64/: config.asm  config.h
chromium/config/Chrome/linux-noasm/x64/: config.h
chromium/config/Chrome/linux/arm/: config.h
chromium/config/Chrome/linux/arm-neon/: config.h
chromium/config/Chrome/linux/arm/libavcodec/: codec_list.c
chromium/config/Chrome/linux/arm64/: config.h
chromium/config/Chrome/linux/ia32/: config.asm  config.h
chromium/config/Chrome/linux/ia32/libavformat/: demuxer_list.c
chromium/config/Chrome/linux/mips64el/: config.h
chromium/config/Chrome/linux/mipsel/: config.h
chromium/config/Chrome/linux/x64/: config.asm  config.h
chromium/config/Chrome/mac/arm64/: config.h
chromium/config/Chrome/mac/ia32/: config.asm  config.h
chromium/config/Chrome/mac/x64/: config.asm  config.h
chromium/config/Chrome/win/ia32/: config.asm  config.h
chromium/config/Chrome/win/x64/: config.asm  config.h
chromium/config/ChromeOS/linux-noasm/x64/: config.h
chromium/config/ChromeOS/linux/arm/: config.h
chromium/config/ChromeOS/linux/arm-neon/: config.h
chromium/config/ChromeOS/linux/arm64/: config.h
chromium/config/ChromeOS/linux/ia32/: config.asm  config.h
chromium/config/ChromeOS/linux/mipsel/: config.h
chromium/config/ChromeOS/linux/x64/: config.asm  config.h
chromium/config/Chromium/android/arm/: config.h
chromium/config/Chromium/android/ia32/: config.asm
chromium/config/Chromium/linux-noasm/x64/: config.h
chromium/config/Chromium/linux/arm/: config.h
chromium/config/Chromium/linux/arm-neon/: config.h
chromium/config/Chromium/linux/arm64/: config.h
chromium/config/Chromium/linux/ia32/: config.asm  config.h
chromium/config/Chromium/linux/mipsel/: config.h
chromium/config/Chromium/linux/x64/: config.asm  config.h
chromium/config/Chromium/mac/ia32/: config.asm  config.h
chromium/config/Chromium/mac/x64/: config.asm  config.h
chromium/config/Chromium/openbsd/ia32/: config.h
chromium/config/Chromium/openbsd/x64/: config.h
chromium/config/Chromium/win/ia32/: config.asm  config.h
chromium/config/Chromium/win/x64/: config.asm  config.h
chromium/config/ChromiumOS/linux-noasm/x64/: config.h
chromium/config/ChromiumOS/linux/arm/: config.h
chromium/config/ChromiumOS/linux/arm-neon/: config.h
chromium/config/ChromiumOS/linux/arm64/: config.h
chromium/config/ChromiumOS/linux/ia32/: config.asm  config.h
chromium/config/ChromiumOS/linux/mipsel/: config.h
chromium/config/ChromiumOS/linux/x64/: config.asm  config.h
chromium/config/Ensemble/linux-noasm/x64/: config.h
chromium/config/Ensemble/linux/arm/: config.h
chromium/config/Ensemble/linux/ia32/: config.asm  config.h
chromium/config/Ensemble/linux/mipsel/: config.h
chromium/config/Ensemble/linux/x64/: config.asm  config.h
chromium/patches/: README
chromium/scripts/: build_ffmpeg.py  robo_branch.py  robo_setup.py  robosushi.py
libavcodec/: allcodecs.c  libopenh264enc.c  libvpxenc.c  libx264.c  options_table.h
libavcodec/x86/: autorename_libavcodec_x86_lpc.c
libavformat/: matroskaenc.c  mov.c  oggdec.c  rtmpproto.c  utils.c
libavutil/aarch64/: asm.S
libogg/: BUILD.gn  libogg.gyp
libswresample/: autorename_libswresample_options.c
libswresample/arm/: autorename_libswresample_arm_resample.S
libswscale/: utils.c
libswscale/aarch64/: autorename_libswscale_aarch64_swscale_unscaled.c
libswscale/arm/: autorename_libswscale_arm_hscale.S  autorename_libswscale_arm_output.S  autorename_libswscale_arm_swscale_unscaled.c
libswscale/x86/: autorename_swscale_x86_rgb2rgb.c  autorename_swscale_x86_swscale.c  autorename_swscale_x86_yuv2rgb.c
libvorbis/: BUILD.gn  libvorbis.gyp
libvorbis/config/win/ia32/: config.h
libx264/: BUILD.gn  autorename_encoder_cabac.c  autorename_encoder_macroblock.c  autorename_encoder_set.c  nasm_assemble.gni  nasm_mac64  run_nasm.py  x264.gyp  x264_generated.gni  x264_generated.gypi  xcode_hack.c
libx264/config/linux/arm/: config.asm  config.h
libx264/config/linux/ia32/: config.asm  config.h
libx264/config/linux/x64/: config.asm  config.h  x264_config.h
libx264/config/mac/arm64/: config.asm  config.h  x264_config.h
libx264/config/mac/x64/: config.asm  config.h
libx264/config/win/ia32/: config.asm  config.h
libx264/config/win/x64/: config.asm  config.h
