import("../ffmpeg_options.gni")

config("libogg_config") {
  defines = [
    "PIC",
    "HAVE_CONFIG_H",
  ]
  include_dirs = [
    # platform and arch-specific headers
      "config/$os_config/$ffmpeg_arch",
      "include",
  ]
}

static_library("libogg") {
  sources = [
    "src/framing.c",
    "src/bitwise.c",
  ]
  public_configs = [":libogg_config"]
}

executable("libogg_test") {
  deps = [ ":libogg" ]
  sources = [ "test.c" ]
}
