import("../ffmpeg_options.gni")

config("libvorbis_config") {
  defines = [
    "PIC",
    "HAVE_CONFIG_H",
  ]
  include_dirs = [
    # platform and arch-specific headers
      "config/$os_config/$ffmpeg_arch",
      "include",
  ]
}
static_library("libvorbisenc") {
  deps = [":libvorbis"]
  include_dirs = ["lib"]
  sources = ["lib/vorbisenc.c"]
}

static_library("libvorbis") {
  public_deps = ["../libogg:libogg"]
  sources = [
    "lib/mdct.c",
    "lib/smallft.c",
    "lib/block.c",
    "lib/envelope.c",
    "lib/window.c",
    "lib/lsp.c",
    "lib/lpc.c",
    "lib/analysis.c",
    "lib/synthesis.c",
    "lib/psy.c",
    "lib/info.c",
    "lib/floor1.c",
    "lib/floor0.c",
    "lib/res0.c",
    "lib/mapping0.c",
    "lib/registry.c",
    "lib/codebook.c",
    "lib/sharedbook.c",
    "lib/lookup.c",
    "lib/bitrate.c",
  ]
  public_configs = [":libvorbis_config"]
}

executable("libvorbis_test") {
  deps = [ ":libvorbis" ]
  sources = [ "examples/decoder_example.c" ]
}
